--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@pinata/sdk": "^2.1.0",
     "form-data": "^4.0.0",
     "formidable": "^2.1.2",
-    "next": "13.4.12",
+    "fs-extra": "^11.2.0",
+    "graceful-fs": "^4.2.11",
+    "next": "^14.2.5",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
